<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:backgroundTint="#000000"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/previous"
            style="@style/buttonStyle"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/previous"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next"
            style="@style/buttonStyle"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/next"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/previous" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="193dp"
            android:layout_height="106dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066"
            app:srcCompat="@drawable/user" />

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.588">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/website"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/zipcode"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/street"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/suite"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/suite"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/lat"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/lng"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>